packages/infra/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: doxo-auth
        image: naseemahmad244/doxo-auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-serv
spec:
  selector:
    app: auth
  ports:
  - port: 4000
    targetPort: 4000
