packages/infra/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: doxo-client
        image: naseemahmad244/doxo-client
---
apiVersion: v1
kind: Service
metadata:
  name: client-serv
spec:
  selector:
    app: client
  ports:
  - port: 3000
    targetPort: 3000
