packages/infra/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-serv
  labels:
    name: ingress-serv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: fusuoy.dev
    http:
      paths:
      - pathType: Prefix
        path: "/api/auth/signup"
        backend:
          service:
            name: auth-serv
            port: 
              number: 4000
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client-serv
            port: 
              number: 3000
